Updating trunk to version 2.5.0